SQuirreL SQL Client Change Log
==============================

Not yet released - available from SVN or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

Hibernate Plugin:
  - New handling of limiting object count for HQL queries. This may prevent severe performance problems.
    Formerly the limit was set more or less under the hood (SQL limit was used).
    Setting the limit can cause the performance problems.  
  - Hibernate session can now be started in an external process.
    This can keep SQuirreL from running into memory problems when working with the Hibernate Plugin.
    See Hibernate configuration panel for details. 

Introduced a new general data type property 'Use column labels instead of column names in result headers'.
See Global Preferences --> Tab 'Data Type Controls'. Will be useful e.g. for MySQL if Aliases are used in Select clauses.

Session Property: "Keep SQL result table layout on rerun SQL"
If this option is checked the layout of the table of a SQL result is tried to be restored after rerunning the SQL.
Note: You rerun an SQL statement when you click the running man button on the upper left of a SQL result.

New way to view query results: There is a new tab inside a query result named "Overview".
It might need some trying out to understand what it does.  

Incorporated patch which provides a node in the object tree called LOB which lists all LOBs, providing 
details about each (Thanks to Bogdan Cristian Paulon) 

Incorporated patch which provides a node under each table in the object tree that lists all of the 
constraints for that table. (Thanks to Bogdan Cristian Paulon)

Netezza Plugin: Added support for displaying external tables in the object tree.

Bug-fixes:

Double click in Alias tree always opened the selected Alias even if the mouse pointer wasn't placed on the Alias.
 This way Aliases where opened when tree nodes where quickly closed or opened.
