@@ -15,3 +15,5 @@ SQLScriptPreferencesTab.hint=Settings for the SQL Script plugin
 
 SQLScriptPreferencesPanel.useDoubleQuotesForQualifying=Use double quotes (") for qualifying
 
+SQLScriptPreferencesPanel.escapeNewLine=New lines in literals should be escaped by
+SQLScriptPreferencesPanel.escapeNewLineTextfieldLabel=Escape character/string:
