@@ -77,7 +77,7 @@
 
          <P><B>
             For all changes see <a
-            href="http://squirrel-sql.svn.sourceforge.net/viewvc/squirrel-sql/trunk/sql12/doc/changes.txt">Changelog</a>.
+            href="http://squirrel-sql.svn.sourceforge.net/viewvc/squirrel-sql/trunk/sql12/doc/src/main/resources/changes.txt">Changelog</a>.
             Likewise, please refer SQuirreL's help section for an overview of all features.
             <p><a href="#installation">Download</A></p>
 
